<resources>
    <string name="app_name">Печь дня</string>
    <string name="today">Печь дня сегодня</string>
    <string name="furnaceName">Название печи</string>
    <string name="favorite">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="collection">Коллекция</string>
    <string name="furnaceTitle">Название печи</string>
    <string name="add_favorite">Добавить в избранное</string>
    <string name="dark_theme">Темная тема</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="link_mail">helenpupysheva@yandex.ru</string>
    <string name="message_text">Спасибо разработчикам за крутое приложение!</string>
    <string name="theme_text">Сообщение разработчикам dailyFurnace</string>
    <string name="share_text">Поделиться приложением через</string>
    <string name="link">url</string>
    <string name="share">Поделиться приложением</string>
    <string name="details">Подробнее</string>
    <string name="remove_favorite">Удалить из избранного</string>
    <string name="search">Поиск</string>
    <string name="clear_search">Очистить поиск</string>
    <string name="clear_favourite">Очистить избранное</string>
    <string name="error">Упс... Что-то пошло не так</string>
    <string name="retry">Повторить</string>
    <string name="error_placeholder">Ошибка загрузки</string>
    <string name="no_internet_message">Не удалось подключиться к серверу</string>
    <string name="not_found_message">Данные не найдены</string>
    <string name="server_error_message">Ошибка сервера</string>
    <string name="empty_message">Нет данных</string>
    <string name="generic_error_message">Что-то пошло не так</string>
    <string name="empty_collection_message">Коллекция пока пуста</string>
    <string name="search_not_found_message">Ничего не найдено</string>
    <string name="empty_favorites_message">В избранном пока ничего нет</string>
</resources>