<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailedFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingBottom="16dp"
    tools:context=".media.ui.DetailedFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDetailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            app:iconGravity="textStart"
            app:navigationIcon="@drawable/back"
            app:title="@string/details"
            android:fontFamily="@font/dehinted_razerf5_bold"
            app:titleTextColor="@color/light_mode_txt" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/furnaceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dehinted_razerf5_bold"
                android:text="@string/furnaceTitle"
                android:textColor="@color/light_mode_txt"
                android:textSize="@dimen/size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/favoriteButton"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/add_favorite"
                android:src="@drawable/ic_favorite_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/furnaceImage"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/today"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/fire" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/furnaceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:layout_marginBottom="@dimen/size_16dp"
            android:fontFamily="@font/dehinted_razerf5_regular"
            android:textAlignment="center"
            android:textColor="@color/light_mode_txt"
            android:textSize="@dimen/size_16sp" />
    </LinearLayout>
</ScrollView>
