<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dehinted_razerf5_bold"
        android:text="@string/today"
        android:textColor="@color/light_mode_txt"
        android:textFontWeight="400"
        android:textSize="@dimen/size_24sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/contentGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/furnaceCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/furnaceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/size_16dp"
                    android:clickable="true"
                    android:fontFamily="@font/dehinted_razerf5_bold"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/furnaceTitle"
                    android:textColor="@color/light_mode_txt"
                    android:textFontWeight="200"
                    android:textSize="@dimen/size_18sp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/furnaceImage"
                    android:layout_width="280dp"
                    android:layout_height="280dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/today"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/fire" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/furnaceInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/dehinted_razerf5_regular"
                    android:fontWeight="400"
                    android:textAlignment="center"
                    android:textColor="@color/light_mode_txt"
                    android:textSize="@dimen/size_16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/favoriteButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/add_favorite"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_favorite_selector" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/addFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:fontFamily="@font/dehinted_razerf5_thin"
                android:fontWeight="400"
                android:text="@string/add_favorite"
                android:textColor="@color/light_mode_txt"
                android:textSize="@dimen/size_16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/placeholderGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/placeholderImage"
                android:layout_width="260dp"
                android:layout_height="130dp"
                android:contentDescription="@string/error_placeholder"
                android:scaleType="centerCrop"
                android:src="@drawable/error" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/placeholderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/dehinted_razerf5_regular"
                android:text="@string/error"
                android:textAlignment="center"
                android:textColor="@color/light_mode_txt"
                android:textSize="@dimen/size_16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/retryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/retry" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>
</LinearLayout>