<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearFavButton"
            style="@style/styleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_16dp"
            android:textColor="@color/light_mode_txt"
            android:text="@string/clear_favourite"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/favoritesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/size_16dp"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:layout_marginEnd="@dimen/size_16dp"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/size_64dp"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="6"
                    tools:listitem="@layout/item_furnace" />

                <LinearLayout
                    android:id="@+id/placeholderGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/size_24dp"
                    android:visibility="gone">

                        <ImageView
                            android:id="@+id/placeholderImage"
                            android:layout_width="@dimen/size_260dp"
                            android:layout_height="@dimen/size_130dp"
                            android:contentDescription="@string/error_placeholder"
                            android:scaleType="centerCrop"
                            android:src="@drawable/error" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/placeholderText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/size_16dp"
                            android:fontFamily="@font/dehinted_razerf5_regular"
                            android:text="@string/error"
                            android:textAlignment="center"
                            android:textColor="@color/light_mode_txt"
                            android:textSize="@dimen/size_16sp" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

        </FrameLayout>

</LinearLayout>